--- a/src/components/OptionsToolbar/OptionsToolbar.scss
+++ b/src/components/OptionsToolbar/OptionsToolbar.scss
@@ -20,19 +20,22 @@
 }
 
 .more-options-menu {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
   li {
     display: flex;
     align-items: center;
   }
 }
 
-.more-options-menu,
-.report-problem-menu {
+.more-options-menu {
   background: var(--react-autoql-background-color-secondary);
   padding: 10px 0;
 
   span.react-autoql-icon {
-    margin-right: 3px;
+    margin-right: 10px;
   }
 }
 
