fix: warning and danger icon colours

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -67,7 +67,7 @@
   }
 }
 
-.react-autoql-btn.danger {
+.react-autoql-btn.react-autoql-icon-danger {
   &:not(.btn-filled) {
     color: var(--react-autoql-danger-color, #ca0b00);
     border: 1px solid var(--react-autoql-danger-color, #ca0b00);
