--- a/src/components/ChatMessage/ChatMessage.scss
+++ b/src/components/ChatMessage/ChatMessage.scss
@@ -45,7 +45,7 @@
   }
 
   .chat-message-bubble {
-    box-shadow: var(--react-autoql-box-shadow-color) 0px 1px 2px 0px;
+    box-shadow: var(--react-autoql-box-shadow-1);
   }
 
   &.response {
