--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -18,7 +18,7 @@
   overflow: hidden;
 
   border-radius: 6px;
-  box-shadow: var(--react-autoql-box-shadow-color) 0px 1px 2px 0px;
+  box-shadow: var(--react-autoql-box-shadow-1);
 }
 
 .react-autoql-dashboard-tile-inner-div {
@@ -448,7 +448,7 @@
   font-weight: normal;
   z-index: 2;
   overflow: hidden;
-  box-shadow: 0 1px 3px 0 var(--react-autoql-box-shadow-color, rgba(0, 0, 0, 0.15));
+  box-shadow: var(--react-autoql-box-shadow-1);
   text-align: left;
   width: 100%;
   top: 35px;
