--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -430,12 +430,6 @@
 .dashboard-tile-input-container input::placeholder {
   opacity: 0.5;
 }
-.react-autoql-dashboard .edit-mode-placeholder-icon {
-  display: inline-block;
-  line-height: 22px;
-  vertical-align: middle;
-  height: 23px;
-}
 .dashboard-tile-input-container .react-autosuggest__suggestions-container--open {
   position: absolute;
   bottom: unset;
@@ -477,13 +471,16 @@
 }
 
 .dashboard-tile-placeholder-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 15px;
+  font-style: italic;
   color: var(--react-autoql-text-color-placeholder, rgba(0, 0, 0, 0.3));
   padding: 0 10px;
 
-  .play-icon {
-    vertical-align: bottom;
-    line-height: 20px;
+  .react-autoql-icon {
+    margin: 0px 5px;
   }
 }
 
