--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -18,7 +18,7 @@
     }
   }
 
-  .react-autoql-button-icon {
+  .react-autoql-btn-icon {
     margin-right: 6px;
   }
 }
@@ -31,11 +31,11 @@
 }
 
 // Size
-.react-autoql-btn.small {
+.react-autoql-btn.react-autoql-btn-small {
   padding: 2px 8px;
   margin: 2px 3px;
 }
-.react-autoql-btn.large {
+.react-autoql-btn.react-autoql-btn-large {
   padding: 10px 16px;
   margin: 2px 5px;
 }
@@ -49,7 +49,7 @@
   }
 }
 
-.react-autoql-btn.default {
+.react-autoql-btn.react-autoql-btn-default {
   border: 1px solid var(--react-autoql-accent-color);
   color: var(--react-autoql-accent-color);
   background: inherit;
@@ -58,7 +58,7 @@
   }
 }
 
-.react-autoql-btn.primary {
+.react-autoql-btn.react-autoql-btn-primary {
   background: var(--react-autoql-accent-color);
   border: 1px solid var(--react-autoql-accent-color);
   color: var(--react-autoql-text-color-accent);
@@ -67,7 +67,7 @@
   }
 }
 
-.react-autoql-btn.react-autoql-icon-danger {
+.react-autoql-btn.react-autoql-btn-danger {
   &:not(.btn-filled) {
     color: var(--react-autoql-danger-color, #ca0b00);
     border: 1px solid var(--react-autoql-danger-color, #ca0b00);
