--- a/src/components/ChataTable/ChataTable.scss
+++ b/src/components/ChataTable/ChataTable.scss
@@ -232,7 +232,7 @@
 
     .tabulator-row {
       /* user-select: none; This breaks copy/paste */
-      border-bottom: 1px solid var(--react-autoql-border-color);
+      border-bottom: 1px solid var(--react-autoql-table-border-color);
       background-color: var(--react-autoql-background-color-secondary);
       z-index: 1;
 
@@ -244,7 +244,7 @@
       .tabulator-cell {
         &:not(:first-child) {
           border-left: 1px solid !important;
-          border-color: rgba(0, 0, 0, 0.06) !important;
+          border-color: var(--react-autoql-table-border-color) !important;
         }
         &.pivot-category {
           font-weight: 600;
@@ -300,7 +300,7 @@
     }
 
     .tabulator-cell {
-      border-color: var(--react-autoql-border-color);
+      border-color: var(--react-autoql-table-border-color);
       background-color: var(--react-autoql-background-color-secondary);
     }
 
