--- a/src/components/Notifications/DataAlerts/DataAlerts.scss
+++ b/src/components/Notifications/DataAlerts/DataAlerts.scss
@@ -6,6 +6,12 @@
   height: 100%;
 
   .react-autoql-notification-setting-actions {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    flex-wrap: nowrap;
     white-space: nowrap;
   }
 
@@ -33,6 +39,19 @@
       line-height: 55px;
       transition: height 0.3s cubic-bezier(0.26, 0.26, 0, 1);
 
+      .react-autoql-notification-action {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-left: 24px;
+      }
+
+      .react-autoql-notification-action-hidden {
+        pointer-events: none;
+        visibility: hidden;
+        opacity: 0;
+      }
+
       .react-autoql-notification-error-status-icon {
         margin-right: 10px;
         cursor: pointer;
@@ -42,8 +61,7 @@
       }
 
       .reset-period-info-icon {
-        padding-right: 20px;
-        font-size: 17px;
+        font-size: 19px;
         opacity: 1;
         cursor: pointer;
         color: var(--react-autoql-accent-color);
@@ -55,12 +73,11 @@
         }
       }
 
-      .react-autoql-notification-action-btn {
-        opacity: 0;
-        margin-right: 20px;
-        font-size: 16px;
+      .react-autoql-notification-action-btn:not(.react-autoql-notification-action-hidden) {
+        font-size: 19px;
         transition: all 0.2s ease;
         color: var(--react-autoql-text-color-primary);
+        opacity: 0;
         cursor: pointer;
 
         &:hover {
@@ -70,26 +87,22 @@
       }
 
       &:hover .react-autoql-notification-action-btn {
-        opacity: 0.5;
+        opacity: 0.7;
       }
     }
 
     .react-autoql-notification-setting-item-header {
       display: flex;
+      align-items: center;
       justify-content: space-between;
-      height: 56px;
-      padding-left: 25px;
-      padding-right: 8px;
+      padding: 0 25px;
       border-bottom: 1px solid var(--react-autoql-border-color, rgba(0, 0, 0, 0.05));
     }
 
     .react-autoql-notification-enable-checkbox {
-      margin-bottom: 4px;
-      margin-right: 8px;
     }
+
     .react-autoql-notification-disable-checkbox {
-      margin-bottom: 4px;
-      margin-right: 8px;
       opacity: 0.5;
       pointer-events: none;
     }
@@ -125,14 +138,13 @@
   }
 
   .react-autoql-notification-setting-display-name {
+    flex: 1;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     padding-right: 10px;
-    .react-autoql-notification-setting-display-name-message {
-      opacity: 0.5;
-    }
   }
+
   .react-autoql-re-initialize-btn {
     vertical-align: middle;
     height: 18px;
