--- a/src/components/FilterLockPopover/FilterLockPopover.scss
+++ b/src/components/FilterLockPopover/FilterLockPopover.scss
@@ -83,7 +83,91 @@
     }
   }
 }
-
+.mobile-filter-lock-menu {
+	z-index: 99999 !important;
+	top: -4px !important;
+	min-width: 95vw;
+	max-width: 95vw;
+	min-height: 0px;
+	max-height: 95vh;
+	height: 350px;
+	padding: 10px;
+  
+	.filter-lock-menu-content-container {
+	  background: var(--react-autoql-background-color-secondary);
+	  color: var(--react-autoql-text-color-primary);
+	  box-shadow: 0px 0 8px var(--react-autoql-box-shadow-color, rgba(0, 0, 0, 0.15));
+	  transition: opacity 0.1s ease 0s !important;
+	  border: 1px solid #ababab52;
+	  padding: 0 !important;
+	  border-radius: 4px;
+	  height: 100%;
+	  width: 100%;
+	  opacity: 1;
+	}
+  
+	.filter-lock-menu-popover-arrow {
+	  border-bottom: 10px solid var(--react-autoql-border-color) !important;
+	  top: 1px !important;
+	  opacity: 1;
+  
+	  &::after {
+		content: '';
+		position: absolute;
+		border-left: 9px solid transparent;
+		border-right: 9px solid transparent;
+		border-bottom: 9px solid var(--react-autoql-background-color-secondary);
+		top: 1px;
+		left: -9px;
+	  }
+	}
+  
+	.filter-lock-toast-container {
+	  top: 0;
+	  position: absolute;
+	  max-width: calc(100% - 36px);
+	  padding: 10px;
+	  font-size: 14px;
+  
+	  .Toastify__toast {
+		min-height: 48px;
+	  }
+  
+	  .Toastify__toast-body {
+		justify-content: center;
+	  }
+  
+	  .Toastify__toast-body > div:last-child {
+		flex: unset;
+	  }
+	}
+  
+	.include-exclude-toggle-group {
+	  height: 23px;
+	  font-size: 12px;
+	  font-weight: 200;
+  
+	  .react-autoql-radio-btn.active {
+		background-color: var(--react-autoql-border-color);
+	  }
+  
+	  :first-child.react-autoql-radio-btn {
+		&:hover,
+		&.active {
+		  color: var(--react-autoql-accent-color);
+		  border-color: var(--react-autoql-accent-color);
+		}
+	  }
+  
+	  :nth-child(2).react-autoql-radio-btn {
+		&:hover,
+		&.active {
+		  color: var(--react-autoql-danger-color);
+		  border-color: var(--react-autoql-danger-color);
+		}
+	  }
+	}
+  }
 .filter-lock-menu-content {
   padding: 15px 0 0px 20px;
   display: flex;
