fix toolbar ref issue in notifications

--- a/src/components/Notifications/NotificationItem/NotificationItem.scss
+++ b/src/components/Notifications/NotificationItem/NotificationItem.scss
@@ -209,6 +209,7 @@
 
     .single-value-response-flex-container {
       padding: 10px;
+      padding-bottom: 20px;
     }
 
     .react-autoql-notification-chart-container {
