add handling for data alert and notification updates across all components

--- a/src/components/Notifications/NotificationItem/NotificationItem.scss
+++ b/src/components/Notifications/NotificationItem/NotificationItem.scss
@@ -210,6 +210,10 @@
     .single-value-response-flex-container {
       padding: 10px;
       padding-bottom: 20px;
+
+      .single-value-response {
+        font-size: 17px;
+      }
     }
 
     .react-autoql-notification-chart-container {
