--- a/src/components/Notifications/DataAlerts/DataAlerts.scss
+++ b/src/components/Notifications/DataAlerts/DataAlerts.scss
@@ -173,7 +173,7 @@
         cursor: pointer;
 
         &:hover {
-          color: currentColor;
+          color: var(--react-autoql-info-color);
         }
       }
 
