--- a/src/components/Notifications/DataAlerts/DataAlerts.scss
+++ b/src/components/Notifications/DataAlerts/DataAlerts.scss
@@ -16,7 +16,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: nowrap;
-    white-space: nowrap;
+    text-align: center;
 
     .data-alert-section-content,
     .data-alert-header-item {
@@ -24,6 +24,7 @@
       justify-content: center;
       align-items: center;
       padding: 0 12px;
+      font-size: 13px;
     }
 
     &:first-child {
@@ -56,7 +57,7 @@
 
     .react-autoql-notification-setting-item {
       display: block;
-      height: 55px;
+      min-height: 55px;
       transition: height 0.3s cubic-bezier(0.26, 0.26, 0, 1);
       background-color: var(--react-autoql-background-color-secondary);
       box-shadow: var(--react-autoql-box-shadow-1);
@@ -214,7 +215,7 @@
     }
 
     .react-autoql-notification-setting-item-header {
-      height: 55px;
+      min-height: 55px;
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -244,6 +245,10 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+
+    .data-alert-section-content {
+      font-size: 14px;
+    }
   }
 
   .react-autoql-re-initialize-btn {
