--- a/src/components/Notifications/DataAlerts/DataAlerts.scss
+++ b/src/components/Notifications/DataAlerts/DataAlerts.scss
@@ -6,35 +6,49 @@
   height: 100%;
 
   .data-alerts-list-container {
-    padding-bottom: 15px;
+    padding-bottom: 20px;
   }
 
   .react-autoql-data-alert-list-item-section {
-    flex: 1;
+    flex: 1 0 50px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     flex-wrap: nowrap;
     text-align: center;
+    overflow: hidden;
+
+    .react-autoql-notification-setting-display-name-title {
+      width: 100%;
+      text-overflow: ellipsis;
+      overflow: hidden;
+    }
 
     .data-alert-section-content,
     .data-alert-header-item {
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 0 12px;
       font-size: 13px;
     }
 
+    .data-alert-section-content {
+      padding: 8px 12px;
+    }
+
+    .data-alert-header-item {
+      padding: 0 12px;
+    }
+
     &:first-child {
-      flex: 3;
+      flex: 3 0 50px;
       padding-left: 12px;
       justify-content: flex-start;
     }
 
     &:last-child {
-      flex: 0;
+      flex: 0 0 auto;
       padding-right: 12px;
       justify-content: flex-end;
     }
@@ -101,14 +115,6 @@
         opacity: 0;
       }
 
-      .data-alert-section-cycle {
-        min-width: 70px;
-      }
-
-      .notification-status {
-        min-width: 120px;
-      }
-
       .data-alert-state {
         display: flex;
         opacity: 1;
@@ -117,7 +123,7 @@
         font-size: 13px;
         padding: 2px 5px;
         border-radius: 6px;
-        min-width: 112px;
+        white-space: nowrap;
         cursor: default;
 
         .react-autoql-icon {
@@ -126,15 +132,15 @@
 
         &.data-alert-off {
           &.data-alert-ready {
-            color: var(--react-autoql-text-color-placeholder);
+            color: var(--react-autoql-text-color-primary);
           }
 
           &.data-alert-paused {
-            color: var(--react-autoql-text-color-placeholder);
+            color: var(--react-autoql-text-color-primary);
           }
 
           &.data-alert-triggered {
-            color: var(--react-autoql-text-color-placeholder);
+            color: var(--react-autoql-text-color-primary);
           }
 
           &.data-alert-error {
@@ -180,13 +186,18 @@
 
       .react-autoql-notification-state-action-btn {
         display: flex;
-        transition: all 0.2s ease;
-        margin-left: 10px;
-        color: var(--react-autoql-text-color-primary);
+        transition: background-color 0.2s ease;
+        padding: 4px;
+        margin-left: 7px;
+        box-sizing: content-box;
+        font-size: 11px;
+        border-radius: 20px;
+        color: var(--react-autoql-info-color);
+        border: 1px solid var(--react-autoql-info-color);
         cursor: pointer;
 
         &:hover {
-          color: var(--react-autoql-info-color);
+          background-color: var(--react-autoql-hover-color);
         }
       }
 
@@ -231,13 +242,14 @@
     color: var(--react-autoql-text-color-primary);
 
     .react-autoql-data-alert-section-title {
-      font-size: 18px;
+      font-size: 19px;
       font-weight: 600;
     }
 
     .react-autoql-data-alert-section-subtitle {
       padding-top: 3px;
       padding-bottom: 5px;
+      font-size: 13px;
     }
   }
 
@@ -248,6 +260,9 @@
 
     .data-alert-section-content {
       font-size: 14px;
+      font-weight: 600;
+      overflow: hidden;
+      cursor: default;
     }
   }
 
