add confirm popover and fix inline icon styles

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -36,6 +36,10 @@
   padding: 2px 8px;
   margin: 2px 3px;
 }
+.react-autoql-btn.react-autoql-btn-medium {
+  padding: 6px 12px;
+  margin: 3px 3px;
+}
 .react-autoql-btn.react-autoql-btn-large {
   padding: 10px 16px;
   margin: 2px 5px;
