--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -160,6 +160,7 @@
   .react-autoql-filter-lock-icon-container {
     display: inline-flex;
     position: relative;
+    margin-right: 4px;
 
     .react-autoql-filter-lock-icon-badge {
       position: absolute;
@@ -179,6 +180,19 @@
   outline: none;
 }
 
+.react-autoql-drawer .chat-header-container .react-autoql-drawer-header-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin: 10px 0px 10px 0px;
+  margin-right: 0;
+
+  .react-autoql-icon-close {
+    font-size: 1.2em;
+  }
+}
+
 .react-autoql-drawer .chat-header-container button {
   display: flex;
   justify-content: center;
@@ -187,8 +201,7 @@
   background: transparent;
   border: none;
   color: var(--react-autoql-text-color-accent);
-  margin: 10px 0px 10px 0px;
-  margin-right: 0;
+  margin: 0;
   font-size: 24px;
   cursor: pointer;
   outline: none !important;
@@ -204,6 +217,12 @@
 .intro-qi-link {
   cursor: pointer;
   color: var(--react-autoql-accent-color);
+
+  .react-autoql-icon {
+    margin-right: -3px;
+    vertical-align: middle;
+    padding-bottom: 2px;
+  }
 }
 
 /* rc-drawer */
