--- a/src/components/ExploreQueries/ExploreQueries.scss
+++ b/src/components/ExploreQueries/ExploreQueries.scss
@@ -13,6 +13,10 @@
     margin-block-end: 0.83em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
+    .react-autoql-icon {
+      margin-left: 7px;
+      margin-right: 2px;
+    }
   }
 
   .react-autoql-chatbar-input-container {
