--- a/src/components/DataExplorer/DataExplorer.scss
+++ b/src/components/DataExplorer/DataExplorer.scss
@@ -33,13 +33,20 @@
     flex: 1;
 
     h2 {
-      display: block;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
       font-size: 1.5em;
       margin-block-start: 0.83em;
       margin-block-end: 0.83em;
       margin-inline-start: 0px;
       margin-inline-end: 0px;
       color: var(--react-autoql-text-color-primary);
+      .react-autoql-icon {
+        margin-left: 7px;
+        margin-right: 2px;
+      }
     }
 
     .intro-message-list-container {
@@ -47,6 +54,15 @@
       justify-content: center;
       align-items: center;
       text-align: left;
+
+      p {
+        display: flex;
+        flex-wrap: nowrap;
+        align-items: center;
+        .react-autoql-icon {
+          margin-right: 5px;
+        }
+      }
     }
   }
 
@@ -94,6 +110,15 @@
   .data-preview-scroll-component {
     flex: 1;
   }
+  .react-autoql-card-title-text {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+
+    .react-autoql-icon {
+      margin-right: 5px;
+    }
+  }
   .data-explorer-card-placeholder {
     min-height: 90px;
     width: 100%;
@@ -126,9 +151,18 @@
         text-decoration: underline;
       }
 
-      .query-suggestion-text svg {
-        stroke-width: 1px;
-        stroke: currentColor;
+      .query-suggestion-text {
+        display: flex;
+        align-items: center;
+        flex-wrap: nowrap;
+
+        .react-autoql-icon {
+          margin-right: 5px;
+          svg {
+            stroke-width: 1px;
+            stroke: currentColor;
+          }
+        }
       }
 
       .animated-item {
