--- a/src/components/DataExplorer/DataExplorerInput.scss
+++ b/src/components/DataExplorer/DataExplorerInput.scss
@@ -69,6 +69,15 @@
     padding-left: 18px;
     letter-spacing: 0.05em;
     line-height: 22.5px;
+
+    & > span {
+      display: flex;
+      flex-wrap: nowrap;
+      align-items: center;
+      .react-autoql-icon {
+        margin-right: 5px;
+      }
+    }
   }
   .react-autosuggest__suggestion--highlighted {
     background-color: rgba(0, 0, 0, 0.1) !important;
