--- a/src/components/Icon/Icon.scss
+++ b/src/components/Icon/Icon.scss
@@ -6,6 +6,7 @@
   align-items: center;
   vertical-align: baseline;
   line-height: 1em;
+  box-sizing: content-box;
   height: 1em;
   width: 1em;
 
