--- a/src/components/Notifications/NotificationItem/NotificationItem.scss
+++ b/src/components/Notifications/NotificationItem/NotificationItem.scss
@@ -247,14 +247,13 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    padding: 10px;
+    padding: 13px 8px;
 
     .react-autoql-notification-options-btn {
       display: flex;
       opacity: 0.8;
       width: 40px;
       height: 40px;
-      padding: 9px;
       font-size: 24px;
       line-height: 20px;
       border-radius: 20px;
