--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -161,6 +161,7 @@
     display: inline-flex;
     position: relative;
     margin-right: 4px;
+    margin-top: 3px;
 
     .react-autoql-filter-lock-icon-badge {
       position: absolute;
